baml_language/crates/baml_tests/snapshots/parser_error_recovery/baml_tests__parser_error_recovery__02_parser__missing_braces.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "User"
    L_BRACE "{"
    FIELD
      WORD "name"
      TYPE_EXPR "string"
        WORD "string"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Another"
    L_BRACE "{"
    FIELD
      WORD "field"
      TYPE_EXPR "int"
        WORD "int"
    R_BRACE "}"

=== ERRORS ===
Error: Expected '}', found class
   ╭─[ missing_braces.baml:5:1 ]
   │
 5 │ class Another {  // Should still parse this class
   │ ──┬──  
   │   ╰──── Expected '}', found class
   │ 
   │ Note: Error code: E0010
───╯
